--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint-fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cache-loader": "^4.1.0",
     "chartist": "0.11.0",
