--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bootstrap": "^5.2.3",
     "cache-loader": "^4.1.0",
     "chartist": "0.11.0",
+    "leaflet": "^1.9.3",
     "register-service-worker": "1.7.2",
     "v-tooltip": "2.0.0-rc.33",
     "vue": "2.7.14",
-    "vue-router": "3.0.2"
+    "vue-router": "3.0.2",
+    "vue2-leaflet": "^2.7.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
