style refine, install apex charts

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-light-bootstrap-dashboard",
-  "short_name": "vue-light-bootstrap-dashboard",
+  "name": "weehive-client",
+  "short_name": "weehive-client",
   // "icons": [
   //   {
   //     "src": "./img/icons/android-chrome-192x192.png",
