--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "vue-cli-service serve --open"
   },
   "dependencies": {
+    "apexcharts": "^3.37.1",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "cache-loader": "^4.1.0",
@@ -20,6 +21,7 @@
     "leaflet": "^1.9.3",
     "register-service-worker": "1.7.2",
     "vue": "2.7.14",
+    "vue-apexcharts": "^1.6.2",
     "vue-router": "3.0.2",
     "vue2-leaflet": "^2.7.1"
   },
