--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "register-service-worker": "1.7.2",
     "vue": "2.7.14",
     "vue-apexcharts": "^1.6.2",
+    "vue-grid-layout": "^2.4.0",
     "vue-router": "3.0.2",
-    "vue2-leaflet": "^2.7.1"
+    "vue2-leaflet": "^2.7.1",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
